@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}

class Organization {
  -String name
  -String email
  -String nif
}

class Manager {
  -String nameM
  -String emailM
  -String role
}

class User {
}

class Payment{
  -double valueE
  -double valueC
}

class DefinePayment{
  -Time timeToPay
  -Date dateToPay
  -int nrDays
  }

Platform "1" -- "1..*" Organization: has registered >
Organization "1" -- "1" Manager: has >
Organization "1" -- "1..*" DefinePayment: executes >
Manager "1" -- "1" User: acts as >
Manager "1" -- "1" DefinePayment: defines
DefinePayment "1" -- "1..*" Payment: has >

@enduml
